Update 'c0nuoew45-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:d2d478a111f6aef5e6a07466cd16141a1248d00c@sha256:43a44deba2a45cbc5e0868c1938076264e7ed11efacd9ca5353bccd568abcaee

--- a/components/c0nuoew45-go/overlays/development/deployment-patch.yaml
+++ b/components/c0nuoew45-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: c0nuoew45-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:d2d478a111f6aef5e6a07466cd16141a1248d00c@sha256:43a44deba2a45cbc5e0868c1938076264e7ed11efacd9ca5353bccd568abcaee
+          name: container-image
